# sgm

./: CMakeLists.txt  config_example.ini  costs.h  disparity_method.cu  hamming_cost.h  kitti_config.ini  main.cu  median_filter.h  util.h
include/: CenterSymmetricCensusKernel.cuh  ConfigurationGroup.h  CostAggregationKernels.hpp  DisparityEstimation.h  HammingDistanceCostKernel.cuh  ImageProcessorKernels.cuh  MedianFilterKernels.cuh  RoadEstimation.h  RoadEstimationKernels.cuh  Stixels.h  Stixels.hpp  StixelsKernels.cuh  configuration.h  configuration_parameters.h  configuration_roadestimation.h  cost_aggregation.h  debug.h  disparity_method.h  hamming_cost.h  showStixels.h  struct.h  util.hpp
src/: ConfigurationGroup.cpp  debug.cpp  main.cpp  main.cpp.bak  showStixels.cpp
src/CUDA/: CenterSymmetricCensusKernel.cu  DisparityEstimationImpl.cu  HammingDistanceCostKernel.cu  ImageProcessorKernels.cu  MedianFilterKernels.cu  RoadEstimationImpl.cu  RoadEstimationKernels.cu  Stixels.cu  StixelsImpl.cu  StixelsKernels.cu  disparity_method.cu
